<resources>
    <string name="app_name">Code Play</string>

    <string name="invoke">Start</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="title_activity_login">Login</string>

    <string name="loggedIn">Logged In Page</string>
</resources>
