<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/name"
        android:layout_alignBottom="@+id/txtName"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="TextView"
        tools:text="@string/surname"
        android:layout_below="@+id/Name"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        android:layout_below="@+id/surname"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/password"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/cPassword"
        android:layout_alignStart="@+id/cPassword" />

    <TextView
        android:id="@+id/cPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/cPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_toLeftOf="@+id/txtPassword"
        android:layout_toStartOf="@+id/txtPassword"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/surname"
        android:layout_alignLeft="@+id/txtName"
        android:layout_alignStart="@+id/txtName"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/txtSurname"
        android:layout_alignStart="@+id/txtSurname"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtCpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:ems="10"
        android:hint="@string/cPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCpassword"
        android:layout_marginTop="54dp"
        android:layout_toEndOf="@+id/cPassword"
        android:layout_toRightOf="@+id/cPassword"
        android:background="@android:drawable/progress_horizontal"
        android:text="@string/title_activity_login" />
</RelativeLayout>